force-app/main/default/objects/CRMG_GTM__Meeting__c/CRMG_GTM__Meeting__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>GTM Detail</label>
    <nameField>
        <displayFormat>GTM-{0000}</displayFormat>
        <label>GTM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>