force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Attendees__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Attendees__c</fullName>
    <label>#Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>