force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Conference_Audio_Options__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Conference_Audio_Options__c</fullName>
    <label>Conference Audio Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VoIP - Requires microphone and speakers</fullName>
                <default>true</default>
                <label>VoIP - Requires microphone and speakers</label>
            </value>
            <value>
                <fullName>Long distance number for:United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>