force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Conference_Call_Information__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Conference_Call_Information__c</fullName>
    <label>Conference Call Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>