force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Conference_Options__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Conference_Options__c</fullName>
    <label>Conference Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use built-in audio conferencing</fullName>
            </value>
            <value>
                <fullName>Use my own conference call service</fullName>
            </value>
            <value>
                <fullName>Do not provide audio information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>