force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__ConferenceCallInfo__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__ConferenceCallInfo__c</fullName>
    <label>Conference Call Info</label>
    <type>TextArea</type>
</CustomField>