force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByName</label>
    <type>Text</type>
</CustomField>