force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__EndDate__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>