force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__EndDateTime__c</fullName>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>