force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__GTMId__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__GTMId__c</fullName>
    <label>GTMeeting ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>