force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Include_Accept_Reject_Option__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Include_Accept_Reject_Option__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Accept/Reject?</label>
    <type>Checkbox</type>
</CustomField>