force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_Details__c</fullName>
    <label>Meeting Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>