force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_Id__c</fullName>
    <formula>TRIM(LEFT( CRMG_GTM__GTMId__c , 3)) &amp;&quot;-&quot;&amp; MID(CRMG_GTM__GTMId__c,4,3) &amp;&quot;-&quot;&amp;   TRIM(RIGHT( CRMG_GTM__GTMId__c , 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting ID</label>
    <type>Text</type>
</CustomField>