force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__MeetingType__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__MeetingType__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>