force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__MeetingURL__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__MeetingURL__c</fullName>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>