force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Number_of_Attendees__c</fullName>
    <label># of Attendees</label>
    <summaryFilterItems>
        <field>CRMG_GTM__GTM_Attendees__c.CRMG_GTM__Is_Organiser__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CRMG_GTM__GTM_Attendees__c.CRMG_GTM__GTM_Meeting_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>