force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Organizer_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Organizer_Id__c</fullName>
    <formula>IF( OR(ISNULL(CRMG_GTM__Scheduled_On_Behalf_Of__c), ISBLANK(CRMG_GTM__Scheduled_On_Behalf_Of__c)),   CASESAFEID(CreatedById) , CASESAFEID(CRMG_GTM__Scheduled_On_Behalf_Of__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organizer Id</label>
    <type>Text</type>
</CustomField>