force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Organizer_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Organizer_Name__c</fullName>
    <formula>IF( OR(ISNULL(CRMG_GTM__Scheduled_On_Behalf_Of__c), ISBLANK(CRMG_GTM__Scheduled_On_Behalf_Of__c)), CreatedBy.FirstName + CreatedBy.LastName,  CRMG_GTM__Scheduled_On_Behalf_Of__r.FirstName + CRMG_GTM__Scheduled_On_Behalf_Of__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organizer Name</label>
    <type>Text</type>
</CustomField>