force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Password__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Password__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field tells whether the meeting requires password or not.</inlineHelpText>
    <label>Password</label>
    <type>Checkbox</type>
</CustomField>