force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Scheduled_On_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Scheduled_On_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled On Behalf Of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GTM_Details</relationshipName>
    <type>Lookup</type>
</CustomField>