force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Start_Time__c</fullName>
    <formula>TEXT(CRMG_GTM__StartDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>