force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__StartDate__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__StartDate__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>