force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__StartDateTime__c</fullName>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>