force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__StartTime__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__StartTime__c</fullName>
    <label>Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>