force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Status__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>