force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>