force-app/main/default/objects/CRMG_GTM__Meeting__c/fields/CRMG_GTM__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__TimeZone__c</fullName>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>